# slave-of-capitalism

./: Makefile  README.md
backend/: README.md  debug_log.txt  migrate_v1_to_v2.py  pyproject.toml  verify_server_audit.py
backend/app/: constants.py  database.py  main.py
backend/app/models/: __init__.py  balance_audit.py  budget.py  category.py  linked_entry.py  snapshot.py  subcategory.py  system_metadata.py  transaction.py  wallet.py
backend/app/routers/: __init__.py  budgets.py  categories.py  linked_entries.py  transactions.py  transactions_extra.py  wallets.py  wallets_extra.py
backend/app/schemas/: __init__.py  balance_audit.py  budget.py  category.py  linked_entry.py  transaction.py  wallet.py
backend/app/services/: __init__.py  budget_service.py  category_service.py  linked_entry_service.py  snapshot_service.py  transaction_service.py  wallet_service.py
backend/app/utils/: seed_data.py
backend/scripts/: add_net_position_column.py
backend/tests/: conftest.py  crude_integration_test.sh  test_audit_logic.py  test_balance_snapshots.py  test_budgets.py  test_category_service.py  test_ignore_calibration.py  test_installment_flow_v2.py  test_linked_entries.py  test_merge_restriction.py  test_reproduction_bug_40k.py  test_resolve_calibration_math.py  test_resolve_calibration_rules.py  test_router_integration.py  test_service_refactoring.py  test_system_categories.py  test_transactions.py  test_unclassify.py  test_wallets.py
docs/: BALANCE_CALCULATION.md  DATABASE_SCHEMA.md  FINANCIAL_LOGIC.md  README.md  USER_STORIES.md
frontend/: package-lock.json  (+2 more)
(+72 files in other folders)
