[tool.poetry]
name = "expense-manager-backend"
version = "0.1.0"
description = "Local-only Mac expense manager backend"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false  # This is an application, not a library

[tool.poetry.dependencies]
python = ">=3.11,<3.15"  # Limited by PyInstaller compatibility
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pydantic = "^2.5.3"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
freezegun = "^1.5.5"
pyinstaller = "^6.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
